# DurstBotDep

./: .gitignore  README.md  configs.py  gears.py  help.py  helper.py  main.py  pyproject.toml  stayup.py
cogs/: greet.py  helper.py  vibe.py  vibechecker.py
static/: greetings.txt  lyrics.csv
