[tool.poetry]
name = "repl_python3_DurstBot"
version = "0.1.0"
description = ""
authors = ["zzuob <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
"discord.py" = "^1.7.3"
PyNaCl = "^1.5.0"
pandas = "^1.4.2"
Levenshtein = "^0.18.1"
thefuzz = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
